[package]
name = "depile"
version = "0.1.0"
authors = ["Ruifeng Xie <ruifengx@outlook.com>"]
edition = "2021"
repository = "https://github.com/ruifengx/depile.git"
homepage = "https://github.com/ruifengx/depile.git"
license = "AGPL-3.0-or-later"
readme = "README.md"
description = "Translate three-address code back to C code."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parse-display = "0.5.3"
thiserror = "1.0.30"
displaydoc = "0.2.3"
derivative = "2.2.0"
itertools = "0.10.3"
smallvec = "1.7.0"
clap = { version = "3.0.7", features = ["derive"], optional = true }

[dev-dependencies]
indoc = "1.0.3"

[[bin]]
name = "depile"
required-features = ["cli"]

[features]
cli = ["clap"]
